<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <EditText
        android:id="@+id/putzplan_dialog_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="12dp"
        android:hint="Was soll geputzt werden?."
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="12dp"
        android:labelFor="@+id/putzplan_dialog_starting_cleaner_textview"
        android:text="Wer soll anfangen zu putzen?" />

    <Spinner
        android:id="@+id/putzplan_dialog_starting_cleaner_spinner"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/colorAccent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="12dp"
        android:text="Wie oft soll geputzt werden?" />

    <SeekBar
        android:id="@+id/putzplan_dialog_frequency_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="6dp"
        android:focusable="true"
        android:max="3"
        android:textAlignment="center"
        android:thumbTint="@color/transparent" />

    <TextView
        android:id="@+id/putzplan_dialog_frequency_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="6dp"
        android:text="nie" />

    <Button
        android:id="@+id/putzplan_dialog_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:padding="8dp"
        android:text="Hinzufügen"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>