<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/putzplan_cardView_cardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/putzplan_listview_item_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:longClickable="true"
        app:cardCornerRadius="@dimen/activity_vertical_margin"
        app:cardElevation="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/putzplan_listview_item_cardview"
            android:layout_alignTop="@+id/putzplan_listview_item_cardview"
            android:longClickable="true"
            android:padding="12dp">

            <CheckBox
                android:id="@+id/putzplan_listview_item_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/putzplan_list_view_item_titel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/putzplan_listview_item_checkbox"
                android:text="Title"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/putzplan_list_view_item_frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/putzplan_list_view_item_titel"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@+id/putzplan_listview_item_checkbox"
                android:text="Frequency" />

            <TextView
                android:id="@+id/putzplan_list_view_item_firstCleaner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/putzplan_list_view_item_titel"
                android:layout_marginStart="6dp"
                android:layout_alignParentEnd="true"
                android:text="cleaner" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>



